tests-snapshots/dbc-cantools/issue_199_extended.snap.stderr
error[E0425]: cannot find type `GearShifterGearShifter` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:946:35
     |
 946 |     pub fn gear_shifter(&self) -> GearShifterGearShifter {
     |                                   ^^^^^^^^^^^^^^^^^^^^^^
...
1061 | pub enum GearShifterLeftBlinker {
     | ------------------------------- similarly named enum `GearShifterLeftBlinker` defined here
     |
help: an enum with a similar name exists
     |
 946 -     pub fn gear_shifter(&self) -> GearShifterGearShifter {
 946 +     pub fn gear_shifter(&self) -> GearShifterLeftBlinker {
     |

error[E0425]: cannot find type `CruiseButtonsCruiseButtons` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1964:37
     |
1964 |     pub fn cruise_buttons(&self) -> CruiseButtonsCruiseButtons {
     |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^
...
2179 | pub enum CruiseButtons2LkaGapButton {
     | ----------------------------------- similarly named enum `CruiseButtons2LkaGapButton` defined here
     |
help: an enum with a similar name exists
     |
1964 -     pub fn cruise_buttons(&self) -> CruiseButtonsCruiseButtons {
1964 +     pub fn cruise_buttons(&self) -> CruiseButtons2LkaGapButton {
     |

error[E0433]: cannot find type `GearShifterGearShifter` in this scope
   --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:949:18
    |
949 |             3 => GearShifterGearShifter::Park,
    |                  ^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `GearShifterGearShifter`
    |
help: an enum with a similar name exists
    |
949 -             3 => GearShifterGearShifter::Park,
949 +             3 => GearShifterLeftBlinker::Park,
    |

error[E0433]: cannot find type `GearShifterGearShifter` in this scope
   --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:950:18
    |
950 |             0 => GearShifterGearShifter::DriveLow,
    |                  ^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `GearShifterGearShifter`
    |
help: an enum with a similar name exists
    |
950 -             0 => GearShifterGearShifter::DriveLow,
950 +             0 => GearShifterLeftBlinker::DriveLow,
    |

error[E0433]: cannot find type `GearShifterGearShifter` in this scope
   --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:951:18
    |
951 |             _ => GearShifterGearShifter::_Other(self.gear_shifter_raw()),
    |                  ^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `GearShifterGearShifter`
    |
help: an enum with a similar name exists
    |
951 -             _ => GearShifterGearShifter::_Other(self.gear_shifter_raw()),
951 +             _ => GearShifterLeftBlinker::_Other(self.gear_shifter_raw()),
    |

error[E0433]: cannot find type `CruiseButtonsCruiseButtons` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1967:18
     |
1967 |             6 => CruiseButtonsCruiseButtons::Cancel,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `CruiseButtonsCruiseButtons`
     |
help: an enum with a similar name exists
     |
1967 -             6 => CruiseButtonsCruiseButtons::Cancel,
1967 +             6 => CruiseButtons2LkaGapButton::Cancel,
     |

error[E0433]: cannot find type `CruiseButtonsCruiseButtons` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1968:18
     |
1968 |             5 => CruiseButtonsCruiseButtons::Main,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `CruiseButtonsCruiseButtons`
     |
help: an enum with a similar name exists
     |
1968 -             5 => CruiseButtonsCruiseButtons::Main,
1968 +             5 => CruiseButtons2LkaGapButton::Main,
     |

error[E0433]: cannot find type `CruiseButtonsCruiseButtons` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1969:18
     |
1969 |             3 => CruiseButtonsCruiseButtons::Set,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `CruiseButtonsCruiseButtons`
     |
help: an enum with a similar name exists
     |
1969 -             3 => CruiseButtonsCruiseButtons::Set,
1969 +             3 => CruiseButtons2LkaGapButton::Set,
     |

error[E0433]: cannot find type `CruiseButtonsCruiseButtons` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1970:18
     |
1970 |             2 => CruiseButtonsCruiseButtons::Resume,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `CruiseButtonsCruiseButtons`
     |
help: an enum with a similar name exists
     |
1970 -             2 => CruiseButtonsCruiseButtons::Resume,
1970 +             2 => CruiseButtons2LkaGapButton::Resume,
     |

error[E0433]: cannot find type `CruiseButtonsCruiseButtons` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1971:18
     |
1971 |             1 => CruiseButtonsCruiseButtons::None,
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `CruiseButtonsCruiseButtons`
     |
help: an enum with a similar name exists
     |
1971 -             1 => CruiseButtonsCruiseButtons::None,
1971 +             1 => CruiseButtons2LkaGapButton::None,
     |

error[E0433]: cannot find type `CruiseButtonsCruiseButtons` in this scope
    --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:1972:18
     |
1972 |             _ => CruiseButtonsCruiseButtons::_Other(self.cruise_buttons_raw()),
     |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `CruiseButtonsCruiseButtons`
     |
help: an enum with a similar name exists
     |
1972 -             _ => CruiseButtonsCruiseButtons::_Other(self.cruise_buttons_raw()),
1972 +             _ => CruiseButtons2LkaGapButton::_Other(self.cruise_buttons_raw()),
     |

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:69:13
   |
65 |             Chime::MESSAGE_ID => Messages::Chime(Chime::try_from(payload)?),
   |             ----------------- matches all the relevant values
...
69 |             SteeringWheelAngle::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
   |
   = note: `-D unreachable-patterns` implied by `-D warnings`
   = help: to override `-D warnings` add `#[allow(unreachable_patterns)]`

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:72:13
   |
66 |             BlinkerStatus::MESSAGE_ID => {
   |             ------------------------- matches all the relevant values
...
72 |             GearShifter::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:78:13
   |
65 |             Chime::MESSAGE_ID => Messages::Chime(Chime::try_from(payload)?),
   |             ----------------- matches all the relevant values
...
78 |             BrakePedal::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:84:13
   |
65 |             Chime::MESSAGE_ID => Messages::Chime(Chime::try_from(payload)?),
   |             ----------------- matches all the relevant values
...
84 |             VehicleSpeed::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this

error: unreachable pattern
  --> tests-snapshots/dbc-cantools/issue_199_extended.snap.rs:87:13
   |
81 |             WheelSpeed::MESSAGE_ID => {
   |             ---------------------- matches all the relevant values
...
87 |             CruiseButtons::MESSAGE_ID => {
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
